--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -4,7 +4,5 @@ html
     title jusypaz - Tablero de inicio
 
   body
-    h1
-      Aplicación de Justicia y Paz
-    h5
-      Bienvenido!
+    h1 Aplicación de Justicia y Paz
+    h5 Bienvenido!
