--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -5,6 +5,7 @@ html(ng-app="jusypazAdminApp")
     script(src='/js/angular-route.min.js')
     script(src='/js/admin.js')
     link(rel='stylesheet', href='/css/admin.css') 
+    link(rel='stylesheet', href='/css/main.css') 
     title jusypaz - Administración
   body
     div#admin_container
