--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ body {
    width: 100%;
 }
 
-input {
+.login input {
     border: 1px solid #003b6f;
     width: 100%;
     border-radius: 5px;
@@ -33,6 +33,29 @@ input {
     margin-bottom: 20px;
     padding: 0 6px;
 }
+
+input.inline_edit_input {
+    border-radius: 5px;
+    height: 28px;
+    margin-bottom: 20px;
+    padding: 0;
+    border: 0;
+    width: 188px;
+    padding: 0 6px;
+}
+
+div.inline_edit_div {
+    background-color: #EBF7F7;
+    border: 1px solid #003b6f;
+    border-radius: 5px;
+    height: 28px;
+    margin-bottom: 20px;
+}
+
+div.inline_edit_text {
+    padding: 6px;
+}
+  
 
 .submit {
     background-color: #003b6f;
@@ -59,18 +82,35 @@ input {
     margin-bottom: 15px;
 }
 
+.w65 {
+  width: 65px;
+}
+
 .inline {
     display: inline-block;
 }
 
-.heading {
+.form {
+  font-size: 14px;
+  height: 28px;
+  margin-bottom: 20px;
+}
+
+.square_28 {
+  height: 28px;
+  width: 28px;
+}
+
+.editable_heading {
   font-weight: bold;
   font-size: 20px;
   margin-right: 15px;
+  width: 200px;
 }
 
 .postulado_info {
     width: 100%;
+    height: 200px;
 }
 
 .postulado_img {
@@ -85,32 +125,78 @@ input {
   float: left;
   margin: 0 15px;
   width: 200px;
+  height: 200px;
 }
 
 .info_footer {
+  margin-top: 40px;
   width: 100%;
 }
 
-div.click-to-edit {
-  font-size: 14px;
-  height: 28px;
+.info_element {
+  height: 66px;
 }
-
-.inline_edit_action {
-  font-size: 0.8em;
-  color: #003b6f;
+.info_element_double {
+  height: 132px;
 }
-
-input.inline_edit_input {
-    font-size: 12px;
-    border: 1px solid #003b6f;
-    border-radius: 2px;
-    height: 28px;
-    padding: 0 6px;
-    width: 100px;
+.info_element_bottom {
+  padding-top:38px;
 }
 
 div.postulado_main {
   width: 100%;
   margin: 50px 0 50px 0;
 }  
+
+div.checkbox_label {
+  display: inline-block;
+}
+div.checkbox_elements {
+  display: inline-block;
+}
+
+label {
+  font-weight: bold;
+}
+
+#direccion {
+  height: 132px;
+}
+
+textarea {
+  background-color: #EBF7F7;
+  border-radius: 5px;
+  width: 194px;
+  overflow: hidden;
+}
+
+.big_text {
+  width: 400px;
+  height: 200px;
+}
+div.big_text_div {
+  width: 400px;
+}
+.action_buttons {
+  height: 50px;
+  margin-left: 20px;
+}
+
+.buttons {
+  height: 45px;
+  width: 80px;
+  border: none;
+  margin-right: 20px;
+}
+
+.action_button {
+  background-color: #5EBAD9;
+  color: white;
+  font-weight: bold;
+}
+
+.cancel_button {
+  background-color: #CACCCC;
+  color: white;
+  font-weight: bold;
+}
