--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -1,11 +1,14 @@
 !!! 5
 html(ng-app="jusypazApp")
   head
+    link(rel='stylesheet', href='/css/main.css') 
     script(src='/js/angular.min.js')
     script(src='/js/tablero.js')
     title jusypaz - Tablero de inicio
 
   body
+    div.navigation_header
+
     h1 Aplicación de Justicia y Paz
     h5 Bienvenido! 
     
