--- a/views/index.jade
+++ b/views/index.jade
@@ -2,9 +2,10 @@
 html
   head
     link(rel='stylesheet', href='/css/main.css') 
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css')
     title jusypaz - Autentificación
   body
-    div#container
+    div.home_container
       div.login
         div.center.mbottom15
           img(class="logo", src="/img/logo.png")
@@ -14,3 +15,4 @@ html
           label.form_label Contraseña: 
           input(type="password", id="password", name="password")
           input(type="Submit", class="submit", value="Login")
+    img.home_banner(src="/img/home_background.png")
