--- a/views/index.jade
+++ b/views/index.jade
@@ -15,4 +15,4 @@ html
           label.form_label Contraseña: 
           input(type="password", id="password", name="password")
           input(type="Submit", class="submit", value="Login")
-    img.home_banner(src="/img/home_background.png")
+    //img.home_banner(src="/img/home_background.png")
