--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -1,58 +1,27 @@
-div(ng-controller="AdminCtrl") 
+div(ng-controller="PostuladoCtrl") 
     //- form(id="postulado_form")
-    div.postulado_main
-      div.inline.editable_heading(inline-edit="post.nombres", placeholder="Nombres") 
-      div.inline.editable_heading(inline-edit="post.apellidos", placeholder="Apellidos") 
-      div.inline.editable_heading(inline-edit="post.cedula", placeholder="Cédula")
-      div.action_buttons
-        button(class="buttons action_button" ng-click="save_postulado()") Salvar
-        button(class="buttons cancel_button" ng-click="cancel()") Cancelar
-      div.messages
-        div.error
-          {{error}}
-        div.notification
-          {{notification}}
+    h1.inline Postulado
+    div.actions.right
+      button.buttons.action_button Salvar
+      button.buttons.action_button Cancelar
+      div.save_indicator
     div.postulado_info
-      div.postulado_img 
-      div.info_col
-        div.info_element
-           label(class="form") Fecha de nacimiento 
-           div.form(ng-pattern="/^(?:(?:31(\.)(?:0?[13578]|1[02]))\1|(?:(?:29|30)(\.)(?:0?[1,3-9]|1[0-2])\2))(?:(?:1[6-9]|[2-9]\d)?\d{2})$|^(?:29(\.)0?2\3(?:(?:(?:1[6-9]|[2-9]\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00))))$|^(?:0?[1-9]|1\d|2[0-8])(\.)(?:(?:0?[1-9])|(?:1[0-2]))\4(?:(?:1[6-9]|[2-9]\d)?\d{2})$/" inline-edit="post.fecha_nacimiento", placeholder="Fecha de nacimiento")
-        div.info_element
-          div.checkbox_label
-           label(class="form") Sexo 
-          div.checkbox_elements
-           label(class="chk_label") Masculino
-           input(class="square_28", type="radio", ng-model="post.sexo" name="post.sexo", value="Masculino") 
-           br
-           label(class="chk_label") Femenino
-           input(class="square_28", type="radio", ng-model="post.sexo" name="post.sexo", value="Femenino") 
-        div.info_element_bottom
-          label(class="form") Estado civil 
-          div.form(inline-edit="post.estado_civil")
-      div.info_col
-        div.info_element_double
-          label(class="form") Dirección 
-          textarea(id="direccion" name="post.direccion" ng-model="post.direccion")
-        div.info_element_bottom
-          label(class="form") Ciudad 
-          div.form(inline-edit="post.ciudad")
-      div.info_col
-        div.info_element
-          label(class="form") Telefono fijo 
-          div.form(inline-edit="post.telefono_fijo")
-        div.info_element
-          label(class="form") Telefono movil 
-          div.form(inline-edit="post.telefono_movil")
-        div.info_element_bottom
-          label(class="form") Correo electrónico 
-          div.form(inline-edit="post.correo")
-    div.info_footer
-      div.big_text_div
-        label(class="form") Estudios
-        br
-        textarea(class="big_text" id="estudios" name="post.estudios" ng-model="post.estudios")
-      div.big_text_div
-        label(class="form") Experiencia laboral 
-        br
-        textarea(class="big_text" id="experiencia" name="post.experiencia" ng-model="post.experiencia")
+      div.postulado_img
+      div.nombres
+        label Nombres
+        input(placeholder="Nombres")
+        label Apellidos
+        input(placeholder="Apellidos")
+      div.cedula
+        label Cédula
+        input(placeholder="Cédula")
+
+
+    tabset.info_tabs
+      tab.info_tab.active(heading="Hoja de Vida" select="hv()")
+        div.tab_content(ng-include="'/partials/hv'" ng-controller="PostuladoCtrl")        
+      tab.info_tab(heading="Justicia y Paz" select="jyp()") 
+      tab.info_tab(heading="Procesos" select="proc()") 
+      tab.info_tab(heading="Bienes" select="bienes()") 
+      tab.info_tab(heading="Menores" select="menores()") 
+
