--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -3,11 +3,14 @@ html(ng-app="jusypazApp")
   head
     link(rel='stylesheet', href='/css/main.css') 
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css')
+    link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet")
     script(src='/js/angular.min.js')
     script(src='/js/angular-route.min.js')
     script(src='/js/angular-animate.min.js')
     script(src='/js/angular-animate.min.js')
     script(src="/js/angular-resource.min.js")
+    //script(src="/js/ui-bootstrap-0.6.0.min.js")
+    script(src="/js/ui-bootstrap-tpls-0.6.0.min.js")
     script(src='/js/app.js')
     title jusypaz - Tablero de inicio
 
